# impls

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: CI.yml  rust.yml
src/: bool.rs  lib.rs  tests.rs
src/tests/: bool.rs  mod.rs
