[package]
name = "impls"
version = "1.0.3"
authors = ["Nikolai Vazquez", "Nadrieril Feneanar"]
license = "MIT OR Apache-2.0"
description = "Determine if a type implements a logical trait expression."
repository = "https://github.com/nvzqz/impls"
homepage = "https://github.com/nvzqz/impls"
documentation = "https://docs.rs/impls"
categories = ["no-std", "rust-patterns", "development-tools::testing"]
keywords = ["impl", "trait", "test", "macro"]
readme = "README.md"
include = ["Cargo.toml", "src", "README*", "CHANGELOG*", "LICENSE*"]
